[package]
name = "nfprobe"
version = "0.0.1"
authors = ["Wenhua Zhao <whzhao@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A netflow probe using ebpf."
repository = "https://github.com/nfprobe/nfprobe"
keywords = ["netflow", "ebpf"]

[dependencies]
libc = "0.2"
elf_rs = "<=0.1.1"

[[bin]]
name = "nfprobe"
path = "src/cmd/main.rs"
